[fontconfig] Revise fixup after find_package

--- a/ports/fontconfig/vcpkg-cmake-wrapper.cmake.in
+++ b/ports/fontconfig/vcpkg-cmake-wrapper.cmake.in
@@ -32,7 +32,7 @@ if(TARGET Fontconfig::Fontconfig)
     endif()
     unset(vcpkg_fontconfig_configurations)
 endif()
-if(Fontconfig_FOUND) # theoretically this could be skipped. If the wrapper is installed it should be found!
+if("@VCPKG_LIBRARY_LINKAGE@" STREQUAL "static")
     find_package(Freetype)
     if(Freetype_FOUND AND TARGET Fontconfig::Fontconfig)
         if(TARGET Freetype::Freetype)
@@ -51,26 +51,19 @@ if(Fontconfig_FOUND) # theoretically this could be skipped. If the wrapper is in
     if(EXPAT_LIBRARIES)
         list(APPEND Fontconfig_LIBRARIES "${EXPAT_LIBRARIES}")
     endif()
-    include(SelectLibraryConfigurations)
-    if(@VCPKG_TARGET_IS_LINUX@)
-        find_library(UUID_LIBRARY_DEBUG NAMES uuid uuidd uuid_d  NAMES_PER_DIR PATH_SUFFIXES lib PATHS "${_INSTALLED_DIR}/debug" NO_DEFAULT_PATH)
-        find_library(UUID_LIBRARY_RELEASE NAMES uuid NAMES_PER_DIR PATH_SUFFIXES lib PATHS "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}" NO_DEFAULT_PATH)
-        select_library_configurations(UUID)
-    endif()
-    if(Fontconfig_LIBRARY_DEBUG AND TARGET Fontconfig::Fontconfig)
-        set_target_properties(Fontconfig::Fontconfig PROPERTIES IMPORTED_LOCATION_DEBUG "${Fontconfig_LIBRARY_DEBUG}")
-        if(UUID_LIBRARY_DEBUG AND @VCPKG_TARGET_IS_LINUX@)
+    if(@DEPENDENCIES_LIBUUID@)
+        set(vcpkg_uuid_prefix "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}")
+        find_library(UUID_LIBRARY_RELEASE NAMES uuid NAMES_PER_DIR PATHS "${vcpkg_uuid_prefix}" PATH_SUFFIXES lib NO_DEFAULT_PATH)
+        find_library(UUID_LIBRARY_DEBUG NAMES uuid uuidd uuid_d NAMES_PER_DIR PATHS "${vcpkg_uuid_prefix}" PATH_SUFFIXES debug/lib lib NO_DEFAULT_PATH)
+        unset(vcpkg_uuid_prefix)
+        if(UUID_LIBRARY_DEBUG AND TARGET Fontconfig::Fontconfig)
             set_property(TARGET Fontconfig::Fontconfig APPEND PROPERTY INTERFACE_LINK_LIBRARIES "$<$<CONFIG:DEBUG>:${UUID_LIBRARY_DEBUG}>")
         endif()
-    endif()
-    if(Fontconfig_LIBRARY_RELEASE AND TARGET Fontconfig::Fontconfig)
-        set_target_properties(Fontconfig::Fontconfig PROPERTIES IMPORTED_LOCATION_RELEASE "${Fontconfig_LIBRARY_RELEASE}")
-        if(UUID_LIBRARY_RELEASE AND @VCPKG_TARGET_IS_LINUX@)
+        if(UUID_LIBRARY_RELEASE AND TARGET Fontconfig::Fontconfig)
             set_property(TARGET Fontconfig::Fontconfig APPEND PROPERTY INTERFACE_LINK_LIBRARIES "$<$<NOT:$<CONFIG:DEBUG>>:${UUID_LIBRARY_RELEASE}>")
         endif()
-    endif()
-
-    if(UUID_LIBRARIES AND @VCPKG_TARGET_IS_LINUX@)
+        include(SelectLibraryConfigurations)
+        select_library_configurations(UUID)
         list(APPEND Fontconfig_LIBRARIES "${UUID_LIBRARIES}")
     endif()
 endif()
