[easyhook] Update target .NET Framework version to 4.7.2.
This is the .NET Framework version for VS2017, and is accepted by VS2019 and VS2022. See https://docs.microsoft.com/en-us/dotnet/framework/install/guide-for-developers

VS2022 does not support targeting 4.0 Client Profile, so this is necessary to un-break easyhook on VS2022.

--- a/versions/e-/easyhook.json
+++ b/versions/e-/easyhook.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "f831a56dad150fcbd7819e5997286be54f86ea18",
+      "version": "2.7.7097.0",
+      "port-version": 5
+    },
+    {
       "git-tree": "54eb13c17af41e5e869503410d13f67e6886c8ff",
       "version": "2.7.7097.0",
       "port-version": 4
