--- a/ports/7zip/CMakeLists.txt
+++ b/ports/7zip/CMakeLists.txt
@@ -1,23 +1,16 @@
-# Created from 7-zip v19.00 - 7zip/CPP/7zip/Bundles/Format7zF
 
-cmake_minimum_required(VERSION 3.11)
-cmake_policy(VERSION 3.11)
+cmake_minimum_required(VERSION 3.19)
+project(7zip LANGUAGES C CXX)
 
 project(7zip LANGUAGES C CXX ASM_MASM)
 
-set(SRC_ASM
-    Asm/x86/AesOpt.asm
-    Asm/x86/7zCrcOpt.asm
-    Asm/x86/XzCrc64Opt.asm
-)
-
-if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-    set_source_files_properties(${SRC_ASM} PROPERTIES COMPILE_FLAGS "-Dx64")
-else()
-    set_source_files_properties(${SRC_ASM} PROPERTIES COMPILE_FLAGS "-safeseh")
+if(WIN32)
+    enable_language(ASM_MASM)
 endif()
 
-set(SRC_COMPRESS
+add_library(7zip)
+
+target_sources(7zip PRIVATE
     CPP/7zip/Compress/Bcj2Coder.cpp
     CPP/7zip/Compress/Bcj2Register.cpp
     CPP/7zip/Compress/BcjCoder.cpp
@@ -68,9 +61,6 @@ set(SRC_COMPRESS
     CPP/7zip/Compress/ZlibEncoder.cpp
     CPP/7zip/Compress/ZDecoder.cpp
     CPP/7zip/Compress/CodecExports.cpp
-)
-
-set(SRC_CRYPTO
     CPP/7zip/Crypto/7zAes.cpp
     CPP/7zip/Crypto/7zAesRegister.cpp
     CPP/7zip/Crypto/HmacSha1.cpp
@@ -85,9 +75,7 @@ set(SRC_CRYPTO
     CPP/7zip/Crypto/WzAes.cpp
     CPP/7zip/Crypto/ZipCrypto.cpp
     CPP/7zip/Crypto/ZipStrong.cpp
-)
 
-set(SRC_C
     C/7zBuf2.c
     C/7zStream.c
     C/Alloc.c
@@ -103,7 +91,6 @@ set(SRC_C
     C/HuffEnc.c
     C/LzFind.c
     C/LzFindMt.c
-    C/LzFindOpt.c
     C/Lzma2Dec.c
     C/Lzma2DecMt.c
     C/Lzma2Enc.c
@@ -120,9 +107,7 @@ set(SRC_C
     C/Ppmd8Dec.c
     C/Ppmd8Enc.c
     C/Sha1.c
-    C/Sha1Opt.c
     C/Sha256.c
-    C/Sha256Opt.c
     C/Sort.c
     C/Threads.c
     C/Xz.c
@@ -132,24 +117,16 @@ set(SRC_C
     C/Aes.c
     C/7zCrc.c
     C/XzCrc64.c
-)
 
-set_source_files_properties(
-    ${SRC_COMPRESS}
-    ${SRC_CRYPTO}
-    ${SRC_C}
-        PROPERTIES
-            COMPILE_FLAGS $<$<CONFIG:RELEASE>:"/O2">
-)
-
-set(SRC_OTHER
     CPP/Common/CRC.cpp
     CPP/Common/CrcReg.cpp
     CPP/Common/DynLimBuf.cpp
     CPP/Common/IntToString.cpp
+    CPP/Common/LzFindPrepare.cpp
     CPP/Common/MyMap.cpp
     CPP/Common/MyString.cpp
     CPP/Common/MyVector.cpp
+    CPP/Common/MyWindows.cpp
     CPP/Common/MyXml.cpp
     CPP/Common/NewHandler.cpp
     CPP/Common/Sha1Reg.cpp
@@ -308,30 +285,109 @@ set(SRC_OTHER
     CPP/7zip/Archive/Zip/ZipOut.cpp
     CPP/7zip/Archive/Zip/ZipUpdate.cpp
     CPP/7zip/Archive/Zip/ZipRegister.cpp
-)
 
-add_library(7zip
-    ${SRC_ASM}
-    ${SRC_OTHER}
-    ${SRC_COMPRESS}
-    ${SRC_CRYPTO}
-    ${SRC_C}
     CPP/7zip/Archive/Archive2.def
     C/Util/LzmaLib/LzmaLib.def
 )
+# 7zCrcOpt
+if(WIN32)
+    if(VCPKG_TARGET_ARCHITECTURE STREQUAL "x86" OR VCPKG_TARGET_ARCHITECTURE STREQUAL "x64")
+        target_sources(7zip PRIVATE Asm/x86/7zCrcOpt.asm)
+        set_source_files_properties(Asm/x86/7zCrcOpt.asm PROPERTIES LANGUAGE ASM_MASM)
+    elseif(VCPKG_TARGET_ARCHITECTURE STREQUAL "arm")
+        #target_sources(7zip PRIVATE Asm/arm/7zCrcOpt.asm)
+        target_sources(7zip PRIVATE C/7zCrcOpt.c)
+    else()
+        target_sources(7zip PRIVATE C/7zCrcOpt.c)
+    endif()
+else()
+    target_sources(7zip PRIVATE C/7zCrcOpt.c)
+endif()
+
+# AesOpt
+if(WIN32)
+    if(VCPKG_TARGET_ARCHITECTURE STREQUAL "x86" OR VCPKG_TARGET_ARCHITECTURE STREQUAL "x64")
+        target_sources(7zip PRIVATE Asm/x86/AesOpt.asm)
+        set_source_files_properties(Asm/x86/AesOpt.asm PROPERTIES LANGUAGE ASM_MASM)
+    else()
+        target_sources(7zip PRIVATE C/AesOpt.c)
+    endif()
+else()
+    target_sources(7zip PRIVATE C/AesOpt.c)
+endif()
+
+# LzFindOpt
+if(WIN32)
+    if(VCPKG_TARGET_ARCHITECTURE STREQUAL "x64")
+        target_sources(7zip PRIVATE Asm/x86/LzFindOpt.asm)
+        set_source_files_properties(Asm/x86/LzFindOpt.asm PROPERTIES LANGUAGE ASM_MASM)
+    else()
+        target_sources(7zip PRIVATE C/LzFindOpt.c)
+    endif()
+else()
+    target_sources(7zip PRIVATE C/LzFindOpt.c)
+endif()
+
+# LzmaDecOpt
+target_sources(7zip PRIVATE C/LzmaDec.c)
+if(WIN32 AND VCPKG_TARGET_ARCHITECTURE STREQUAL "x64" OR VCPKG_TARGET_ARCHITECTURE STREQUAL "arm64")
+    if(VCPKG_TARGET_ARCHITECTURE STREQUAL "x64")
+        target_sources(7zip PRIVATE Asm/x86/LzmaDecOpt.asm)
+        set_source_files_properties(Asm/x86/LzmaDecOpt.asm PROPERTIES LANGUAGE ASM_MASM)
+    elseif(VCPKG_TARGET_ARCHITECTURE STREQUAL "arm64")
+        target_sources(7zip PRIVATE Asm/arm64/LzmaDecOpt.S)
+    endif()
+
+    get_source_file_property(defs C/LzmaDec.c COMPILE_DEFINITIONS)
+    list(APPEND defs "_LZMA_DEC_OPT")
+    set_source_files_properties(C/LzmaDec.c PROPERTIES COMPILE_DEFINITIONS "${defs}")
+endif()
+
+# Sha1Opt
+if(WIN32)
+    if(VCPKG_TARGET_ARCHITECTURE STREQUAL "x86" OR VCPKG_TARGET_ARCHITECTURE STREQUAL "x64")
+        target_sources(7zip PRIVATE Asm/x86/Sha1Opt.asm)
+        set_source_files_properties(Asm/x86/Sha1Opt.asm PROPERTIES LANGUAGE ASM_MASM)
+    else()
+        target_sources(7zip PRIVATE C/Sha1Opt.c)
+    endif()
+else()
+    target_sources(7zip PRIVATE C/Sha1Opt.c)
+endif()
+
+# Sha256Opt
+if(WIN32)
+    if(VCPKG_TARGET_ARCHITECTURE STREQUAL "x86" OR VCPKG_TARGET_ARCHITECTURE STREQUAL "x64")
+        target_sources(7zip PRIVATE Asm/x86/Sha256Opt.asm)
+        set_source_files_properties(Asm/x86/Sha256Opt.asm PROPERTIES LANGUAGE ASM_MASM)
+    else()
+        target_sources(7zip PRIVATE C/Sha256Opt.c)
+    endif()
+else()
+    target_sources(7zip PRIVATE C/Sha256Opt.c)
+endif()
+
+# XzCrc64Opt
+if(WIN32)
+    if(VCPKG_TARGET_ARCHITECTURE STREQUAL "x86" OR VCPKG_TARGET_ARCHITECTURE STREQUAL "x64")
+        target_sources(7zip PRIVATE Asm/x86/XzCrc64Opt.asm)
+        set_source_files_properties(Asm/x86/XzCrc64Opt.asm PROPERTIES LANGUAGE ASM_MASM)
+    else()
+        target_sources(7zip PRIVATE C/XzCrc64Opt.c)
+    endif()
+else()
+    target_sources(7zip PRIVATE C/XzCrc64Opt.c)
+endif()
 
 target_compile_definitions(7zip
     PUBLIC
+        -D_REENTRANT
+        -D_FILE_OFFSET_BITS=64
+        -D_LARGEFILE_SOURCE
         -DEXTERNAL_CODECS
         -D_7ZIP_LARGE_PAGES
         -DUNICODE
         -D_UNICODE
-)
-
-target_compile_options(7zip
-    PRIVATE
-        /wd5043
-        $<$<CONFIG:RELEASE>:/guard:cf>
 )
 
 target_include_directories(7zip
