[loguru] Replace deprecated functions
Remove deprecated functions vcpkg_install_cmake, vcpkg_fixup_cmake_targets, vcpkg_configure_cmake and replace them with vcpkg_cmake_install, vcpkg_cmake_config_fixup and vcpkg_cmake_configure respectively.
Also add vcpkg-cmake and vcpkg-cmake-config to vcpkg.json to provide the replacements

--- a/ports/loguru/CMakeLists.txt
+++ b/ports/loguru/CMakeLists.txt
@@ -19,7 +19,7 @@ target_include_directories(loguru PUBLIC
                                $<INSTALL_INTERFACE:include/loguru>)
 
 if(BUILD_WITH_FMT)
-    target_compile_definitions(loguru PRIVATE LOGURU_USE_FMTLIB)
+    target_compile_definitions(loguru PRIVATE LOGURU_USE_FMTLIB=1)
     find_package(fmt REQUIRED)
     target_link_libraries(loguru PUBLIC fmt::fmt)
 endif()
