--- a/scripts/templates/vcpkg.json.in
+++ b/scripts/templates/vcpkg.json.in
@@ -3,7 +3,16 @@
   "version-string": "",
   "homepage": "",
   "description": "",
-  "dependencies": [],
+  "dependencies": [
+    {
+      "name": "vcpkg-cmake",
+      "host": true
+    },
+    {
+      "name": "vcpkg-cmake-config",
+      "host": true
+    }
+  ],
 
   "default-features": [],
   "features": [
